# advent2020

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.node.yml  docker-compose.yml
advent2020_api/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
advent2020_api/src/: main.rs
advent2020_frontend/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
advent2020_frontend/components/base/: Button.vue
advent2020_frontend/pages/: index.vue
